Thu Sep 23 20:41:07 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Deployment/Handlers/CIAO_Handler_Common.h:
        * ciao/Deployment/Handlers/CIAO_Handler_Common.cpp:
        * ciao/Deployment/Handlers/Component_Handler.h:
        * ciao/Deployment/Handlers/Connection_Handler.h:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
        * ciao/Deployment/Handlers/Container_Handler.h:
        * ciao/Deployment/Handlers/Container_Handler.cpp:
        * ciao/Deployment/Handlers/Home_Handler.h:
        * ciao/Deployment/Handlers/Homed_Component_Handler.h:
        * ciao/Deployment/Handlers/Homed_Component_Handler.cpp:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.h:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
        * ciao/Deployment/Interceptors/Name_Utilities.cpp:
        * tests/DAnCE/Executor-Destructor/Exec_Dest_Status.cpp:
        * tests/DAnCE/Executor-Destructor/Executor_Destructor_Interceptor.h:
        * tests/DAnCE/Executor-Destructor/Executor_Destructor_Interceptor.cpp:
        * tests/DAnCE/LocalityManager/UnexpectedShutdown/UnexpectedShutdown.idl:

          Fixes for re-arranged dance.

Thu Sep 23 20:40:02 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/ciao_container_base_stub.mpb:

          Slight compile fix.

        * ciao/Containers/Containers.mpc:

          Formatting.

Thu Sep 23 16:39:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
          Fuzz

Thu Sep 23 16:17:19 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * rules.ciao.GNU:

          Updated setting the shared library version numbers to match the
          recent change to gnu.mpd and rules.lib.GNU.

Thu Sep 23 13:57:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/tests/AMIDDS/descriptors/run_test.pl:
          Adapted to the new naming convention.

Thu Sep 23 12:28:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>
